--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,45 @@
 .mapContainer {
     display: flex;
 }
+.page {
+  padding: 3rem 6rem;
+  height: 52rem;
+}
+
+.pageContents {
+  display: grid;
+  grid-gap: 2rem;
+  grid-template-columns: 1fr 2fr;
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 1rem;
+  font-family: system-ui, sans-serif;
+  color: black;
+  background-color: white;
+}
+
+h1 {
+  font-weight: 800;
+  font-size: 1.75rem;
+}
+
+li {
+  font-size: 1.25rem;
+}
+
+button {
+  border: 1px solid black;
+  border-radius: 4px;
+  font-size: 1.25rem;
+  width: 100%;
+  padding: 1.25rem;
+  background-color: white;
+  cursor: pointer;
+
+  &:hover {
+    background-color: lightgray;
+  }
+}
