--- a/src/Trip/trip.module.css
+++ b/src/Trip/trip.module.css
@@ -2,4 +2,12 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  text-align: center;
+}
+
+.details {
+  > p, h5 {
+    margin: 0;
+    text-align: left;
+  }
 }
