--- a/src/shared/FloatingPanel/floating-panel.module.css
+++ b/src/shared/FloatingPanel/floating-panel.module.css
@@ -1,9 +1,14 @@
 .floatingPanel {
+  width: 100%;
+  height: 100%;
   position: absolute;
   z-index: 100;
-  padding: 1rem;
-  background-color: white;
-  left: 2rem;
-  top: 2rem;
-  width: 20%;
+
+  @media screen (min-width: 768px) {
+    padding: 1rem;
+    background-color: white;
+    left: 2rem;
+    top: 2rem;
+    width: 20%;
+  }
 }
