--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,79 @@
-* {
+/*
+  1. Use a more-intuitive box-sizing model.
+*/
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
-
-body {
+/*
+  2. Remove default margin
+*/
+* {
   margin: 0;
-  padding: 1rem;
-  font-family: system-ui, sans-serif;
-  color: black;
-  background-color: white;
+}
+/*
+  Typographic tweaks!
+  3. Add accessible line-height
+  4. Improve text rendering
+*/
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+/*
+  5. Improve media defaults
+*/
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+/*
+  6. Remove built-in form typography styles
+*/
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+/*
+  7. Avoid text overflows
+*/
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+/*
+  8. Create a root stacking context
+*/
+#root,
+#__next {
+  isolation: isolate;
 }
 
-h1 {
-  font-weight: 800;
-  font-size: 1.5rem;
-}
+/** {*/
+/*  box-sizing: border-box;*/
+/*}*/
+
+/*body {*/
+/*  margin: 0;*/
+/*  padding: 1rem;*/
+/*  font-family: system-ui, sans-serif;*/
+/*  color: black;*/
+/*  background-color: white;*/
+/*}*/
+
+/*h1 {*/
+/*  font-weight: 800;*/
+/*  font-size: 1.5rem;*/
+/*}*/
