--- a/src/shared/FloatingPanel/floating-panel.module.css
+++ b/src/shared/FloatingPanel/floating-panel.module.css
@@ -1,14 +1,19 @@
 .floatingPanel {
-  width: 100%;
-  height: 100%;
   position: absolute;
   z-index: 100;
+  padding: 1rem;
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(0.75rem);
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
 
-  @media screen (min-width: 768px) {
-    padding: 1rem;
-    background-color: white;
+  @media screen and (min-width: 768px) {
+    width: 20rem;
+    height: unset;
     left: 2rem;
     top: 2rem;
-    width: 20%;
+    border-radius: 1rem;
   }
 }
