--- a/src/shared/FloatingPanel/floating-panel.module.css
+++ b/src/shared/FloatingPanel/floating-panel.module.css
@@ -5,15 +5,16 @@
   background-color: rgba(255, 255, 255, 0.8);
   backdrop-filter: blur(0.75rem);
   width: 100%;
-  height: 100%;
+  height: 50%;
   left: 0;
-  top: 0;
+  bottom: 0;
 
   @media screen and (min-width: 768px) {
     width: 20rem;
     height: unset;
     left: 2rem;
     top: 2rem;
+    bottom: unset;
     border-radius: 1rem;
   }
 }
