--- a/src/team/team.module.css
+++ b/src/team/team.module.css
@@ -1,9 +1,15 @@
 .team {
-  padding: 2rem;
+  padding: 1rem;
   background-color: white;
   border-radius: 5px;
   position: absolute;
   z-index: 100;
   bottom: 1rem;
   left: 2rem;
+  display: flex;
+  gap: 0.5rem;
+}
+
+.name {
+  margin: 0;
 }
