--- a/src/shared/FloatingPanel/floating-panel.module.css
+++ b/src/shared/FloatingPanel/floating-panel.module.css
@@ -5,7 +5,7 @@
   background-color: rgba(255, 255, 255, 0.8);
   backdrop-filter: blur(0.75rem);
   width: 100%;
-  height: 50%;
+  height: 4rem;
   left: 0;
   bottom: 0;
 
@@ -17,4 +17,8 @@
     bottom: unset;
     border-radius: 1rem;
   }
+}
+
+.open {
+  height: 50%;
 }
