--- a/src/shared/FloatingPanel/floating-panel.module.css
+++ b/src/shared/FloatingPanel/floating-panel.module.css
@@ -22,3 +22,11 @@
 .open {
   height: 50%;
 }
+
+.button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin: 1rem;
+  align-self: flex-end;
+}
