--- a/src/shared/FloatingPanel/floating-panel.module.css
+++ b/src/shared/FloatingPanel/floating-panel.module.css
@@ -30,4 +30,9 @@
   top: 0;
   margin: 1rem;
   align-self: flex-end;
+
+  @media screen and (min-width: 768px) {
+    right: unset;
+    left: 0;
+  }
 }
