--- a/src/shared/FloatingPanel/floating-panel.module.css
+++ b/src/shared/FloatingPanel/floating-panel.module.css
@@ -2,8 +2,37 @@
   position: absolute;
   z-index: 100;
   padding: 1rem;
-  background-color: white;
-  left: 2rem;
-  top: 2rem;
-  width: 20%;
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(0.75rem);
+  width: 100%;
+  height: 4rem;
+  left: 0;
+  bottom: 0;
+
+  @media screen and (min-width: 768px) {
+    min-height: 4rem;
+    width: 20rem;
+    height: unset;
+    left: 2rem;
+    top: 2rem;
+    bottom: unset;
+    border-radius: 1rem;
+  }
+}
+
+.open {
+  height: 50%;
+}
+
+.button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin: 1rem;
+  align-self: flex-end;
+
+  @media screen and (min-width: 768px) {
+    right: unset;
+    left: 0;
+  }
 }
