--- a/src/style.css
+++ b/src/style.css
@@ -53,3 +53,20 @@ h5,
 h6 {
   overflow-wrap: break-word;
 }
+
+/** {*/
+/*  box-sizing: border-box;*/
+/*}*/
+
+/*body {*/
+/*  margin: 0;*/
+/*  padding: 1rem;*/
+/*  font-family: system-ui, sans-serif;*/
+/*  color: black;*/
+/*  background-color: white;*/
+/*}*/
+
+/*h1 {*/
+/*  font-weight: 800;*/
+/*  font-size: 1.5rem;*/
+/*}*/
